samples/apr-sphinxdoc/_sources/group_apr_errno.rst.txt
.. index:: pair: group; Error Codes
.. _doxid-group__apr__errno:
.. _cid-apr_errno:

Error Codes
===========

.. toctree::
	:hidden:

	group_APR_Error.rst
	group_APR_STATUS_IS.rst



Overview
~~~~~~~~



|	:ref:`APR Error Values<doxid-group___a_p_r___error>`
|	:ref:`Status Value Tests<doxid-group___a_p_r___s_t_a_t_u_s___i_s>`


.. ref-code-block:: cpp
	:class: overview-code-block

	// typedefs

	typedef int :ref:`apr_status_t<doxid-group__apr__errno_1gaf76ee4543247e9fb3f3546203e590a6c>`

	// global functions

	char*
	:ref:`apr_strerror<doxid-group__apr__errno_1gaf2edf92be162ab8fb1bbc6f22856a131>` (
	    :ref:`apr_status_t<doxid-group__apr__errno_1gaf76ee4543247e9fb3f3546203e590a6c>` statcode,
	    char* buf,
	    apr_size_t bufsize
	    )

	// macros

	#define :ref:`APR_FROM_OS_ERROR<doxid-group__apr__errno_1ga2096daff578ef301e060b80c7a4525bf>`(e)
	#define :ref:`APR_OS_ERRSPACE_SIZE<doxid-group__apr__errno_1gadb8d97e6836ccdc57b43b6119a5acccf>`
	#define :ref:`APR_OS_START_CANONERR<doxid-group__apr__errno_1ga7bca957c11b80b31cb54b0d2cbe9e025>`
	#define :ref:`APR_OS_START_EAIERR<doxid-group__apr__errno_1ga2d04991cb57c67a896e22125a1f22b49>`
	#define :ref:`APR_OS_START_ERROR<doxid-group__apr__errno_1ga191894048b7bd0cca3cf0bdff1eb695b>`
	#define :ref:`APR_OS_START_STATUS<doxid-group__apr__errno_1ga450e1a5734732e092ddaa5b67414f69b>`
	#define :ref:`APR_OS_START_SYSERR<doxid-group__apr__errno_1gad70a5cad6862a9abcc254d35e827ac8b>`
	#define :ref:`APR_OS_START_USEERR<doxid-group__apr__errno_1ga803b8badf8695bdfa4fbcf4d330371f0>`
	#define :ref:`APR_OS_START_USERERR<doxid-group__apr__errno_1gacd35b2de1e38a1fa4717e38d5e153571>`
	#define :ref:`APR_SUCCESS<doxid-group__apr__errno_1ga9ee311b7bf1c691dc521d721339ee2a6>`
	#define :ref:`APR_TO_OS_ERROR<doxid-group__apr__errno_1ga2385cae04b04afbdcb65f1a45c4d8506>`(e)
	#define :ref:`APR_UTIL_ERRSPACE_SIZE<doxid-group__apr__errno_1gaef5e79630739f24d1512d0d044c2bae7>`
	#define :ref:`APR_UTIL_START_STATUS<doxid-group__apr__errno_1gadf26297a72afa0ea224e7097fe59a1cd>`
	#define :ref:`apr_get_netos_error<doxid-group__apr__errno_1ga66e54f155b4a80ac7df9118af9bd896a>`()
	#define :ref:`apr_get_os_error<doxid-group__apr__errno_1gaa76e122da00af0ce2e8c8d7ff538bdfa>`()
	#define :ref:`apr_set_netos_error<doxid-group__apr__errno_1gaafc38481621653ece6f592f9c5a9a09b>`(e)
	#define :ref:`apr_set_os_error<doxid-group__apr__errno_1ga9a2d9a03ad314b03a142574be6d7d8a7>`(e)

.. _details-doxid-group__apr__errno:

Detailed Documentation
~~~~~~~~~~~~~~~~~~~~~~



Typedefs
--------

.. _doxid-group__apr__errno_1gaf76ee4543247e9fb3f3546203e590a6c:
.. _cid-apr_status_t:
.. ref-code-block:: cpp
	:class: title-code-block

	typedef int apr_status_t

Type for specifying an error or status code.

Global Functions
----------------

.. _doxid-group__apr__errno_1gaf2edf92be162ab8fb1bbc6f22856a131:
.. _cid-apr_strerror:
.. ref-code-block:: cpp
	:class: title-code-block

	char*
	apr_strerror (
	    :ref:`apr_status_t<doxid-group__apr__errno_1gaf76ee4543247e9fb3f3546203e590a6c>` statcode,
	    char* buf,
	    apr_size_t bufsize
	    )

Return a human readable string describing the specified error.



.. rubric:: Parameters:

.. list-table::
    :widths: 20 80

    *
        - statcode

        - The error code to get a string for.

    *
        - buf

        - A buffer to hold the error string.

    *
        - bufsize

        - Size of the buffer to hold the string.

Macros
------

.. _doxid-group__apr__errno_1ga2096daff578ef301e060b80c7a4525bf:
.. _cid-apr_from_os_error:
.. ref-code-block:: cpp
	:class: title-code-block

	#define APR_FROM_OS_ERROR(e)

Fold a platform specific error into an apr_status_t code. macro implementation; the syserr argument may be evaluated multiple times.



.. rubric:: Parameters:

.. list-table::
    :widths: 20 80

    *
        - e

        - The platform os error code.



.. rubric:: Returns:

apr_status_t

.. _doxid-group__apr__errno_1gadb8d97e6836ccdc57b43b6119a5acccf:
.. _cid-apr_os_errspace_size:
.. ref-code-block:: cpp
	:class: title-code-block

	#define APR_OS_ERRSPACE_SIZE

APR_OS_ERRSPACE_SIZE is the maximum number of errors you can fit into one of the error/status ranges below except for APR_OS_START_USERERR, which see.

.. _doxid-group__apr__errno_1ga7bca957c11b80b31cb54b0d2cbe9e025:
.. _cid-apr_os_start_canonerr:
.. ref-code-block:: cpp
	:class: title-code-block

	#define APR_OS_START_CANONERR

APR_OS_START_CANONERR is where APR versions of errno values are defined on systems which don't have the corresponding errno.

.. _doxid-group__apr__errno_1ga2d04991cb57c67a896e22125a1f22b49:
.. _cid-apr_os_start_eaierr:
.. ref-code-block:: cpp
	:class: title-code-block

	#define APR_OS_START_EAIERR

APR_OS_START_EAIERR folds EAI_ error codes from getaddrinfo() into apr_status_t values.

.. _doxid-group__apr__errno_1ga191894048b7bd0cca3cf0bdff1eb695b:
.. _cid-apr_os_start_error:
.. ref-code-block:: cpp
	:class: title-code-block

	#define APR_OS_START_ERROR

APR_OS_START_ERROR is where the APR specific error values start.

.. _doxid-group__apr__errno_1ga450e1a5734732e092ddaa5b67414f69b:
.. _cid-apr_os_start_status:
.. ref-code-block:: cpp
	:class: title-code-block

	#define APR_OS_START_STATUS

APR_OS_START_STATUS is where the APR specific status codes start.

.. _doxid-group__apr__errno_1gad70a5cad6862a9abcc254d35e827ac8b:
.. _cid-apr_os_start_syserr:
.. ref-code-block:: cpp
	:class: title-code-block

	#define APR_OS_START_SYSERR

APR_OS_START_SYSERR folds platform-specific system error values into apr_status_t values.

.. _doxid-group__apr__errno_1ga803b8badf8695bdfa4fbcf4d330371f0:
.. _cid-apr_os_start_useerr:
.. ref-code-block:: cpp
	:class: title-code-block

	#define APR_OS_START_USEERR

APR_OS_START_USEERR is obsolete, defined for compatibility only. Use APR_OS_START_USERERR instead.

.. _doxid-group__apr__errno_1gacd35b2de1e38a1fa4717e38d5e153571:
.. _cid-apr_os_start_usererr:
.. ref-code-block:: cpp
	:class: title-code-block

	#define APR_OS_START_USERERR

APR_OS_START_USERERR are reserved for applications that use APR that layer their own error codes along with APR's. Note that the error immediately following this one is set ten times farther away than usual, so that users of apr have a lot of room in which to declare custom error codes.

In general applications should try and create unique error codes. To try and assist in finding suitable ranges of numbers to use, the following ranges are known to be used by the listed applications. If your application defines error codes please advise the range of numbers it uses to dev@apr.apache.org for inclusion in this list.

Ranges shown are in relation to APR_OS_START_USERERR

Subversion - Defined ranges, of less than 100, at intervals of 5000 starting at an offset of 5000, e.g. +5000 to 5100, +10000 to 10100

Apache HTTPD - +2000 to 2999

.. _doxid-group__apr__errno_1ga9ee311b7bf1c691dc521d721339ee2a6:
.. _cid-apr_success:
.. ref-code-block:: cpp
	:class: title-code-block

	#define APR_SUCCESS

no error.

.. _doxid-group__apr__errno_1ga2385cae04b04afbdcb65f1a45c4d8506:
.. _cid-apr_to_os_error:
.. ref-code-block:: cpp
	:class: title-code-block

	#define APR_TO_OS_ERROR(e)

macro implementation; the statcode argument may be evaluated multiple times. If the statcode was not created by apr_get_os_error or APR_FROM_OS_ERROR, the results are undefined.



.. rubric:: Parameters:

.. list-table::
    :widths: 20 80

    *
        - e

        - The apr_status_t folded platform os error code.



.. rubric:: Returns:

os_err_type Fold an apr_status_t code back to the native platform defined error.

.. _doxid-group__apr__errno_1gaef5e79630739f24d1512d0d044c2bae7:
.. _cid-apr_util_errspace_size:
.. ref-code-block:: cpp
	:class: title-code-block

	#define APR_UTIL_ERRSPACE_SIZE

APR_UTIL_ERRSPACE_SIZE is the size of the space that is reserved for use within apr-util. This space is reserved above that used by APR internally. This number MUST be smaller than APR_OS_ERRSPACE_SIZE by a large enough amount that APR has sufficient room for its codes.

.. _doxid-group__apr__errno_1gadf26297a72afa0ea224e7097fe59a1cd:
.. _cid-apr_util_start_status:
.. ref-code-block:: cpp
	:class: title-code-block

	#define APR_UTIL_START_STATUS

APR_UTIL_START_STATUS is where APR-Util starts defining its status codes.

.. _doxid-group__apr__errno_1ga66e54f155b4a80ac7df9118af9bd896a:
.. _cid-apr_get_netos_error:
.. ref-code-block:: cpp
	:class: title-code-block

	#define apr_get_netos_error()

Return the last socket error, folded into apr_status_t, on all platforms This retrieves errno or calls a GetLastSocketError() style function, and folds it with APR_FROM_OS_ERROR.

.. _doxid-group__apr__errno_1gaa76e122da00af0ce2e8c8d7ff538bdfa:
.. _cid-apr_get_os_error:
.. ref-code-block:: cpp
	:class: title-code-block

	#define apr_get_os_error()

This retrieves errno, or calls a GetLastError() style function, and folds it with APR_FROM_OS_ERROR. Some platforms (such as OS2) have no such mechanism, so this call may be unsupported. Do NOT use this call for socket errors from socket, send, recv etc!



.. rubric:: Returns:

apr_status_t the last platform error, folded into apr_status_t, on most platforms

.. _doxid-group__apr__errno_1gaafc38481621653ece6f592f9c5a9a09b:
.. _cid-apr_set_netos_error:
.. ref-code-block:: cpp
	:class: title-code-block

	#define apr_set_netos_error(e)

Reset the last socket error, unfolded from an apr_status_t This is a macro implementation; the statcode argument may be evaluated multiple times. If the statcode was not created by apr_get_os_error or APR_FROM_OS_ERROR, the results are undefined. This macro sets errno, or calls a WSASetLastError() style function, unfolding socketcode with APR_TO_OS_ERROR.



.. rubric:: Parameters:

.. list-table::
    :widths: 20 80

    *
        - e

        - The socket error folded in a prior call to :ref:`APR_FROM_OS_ERROR() <doxid-group__apr__errno_1ga2096daff578ef301e060b80c7a4525bf>`

.. _doxid-group__apr__errno_1ga9a2d9a03ad314b03a142574be6d7d8a7:
.. _cid-apr_set_os_error:
.. ref-code-block:: cpp
	:class: title-code-block

	#define apr_set_os_error(e)

Reset the last platform error, unfolded from an apr_status_t, on some platforms This is a macro implementation; the statcode argument may be evaluated multiple times. If the statcode was not created by apr_get_os_error or APR_FROM_OS_ERROR, the results are undefined. This macro sets errno, or calls a SetLastError() style function, unfolding statcode with APR_TO_OS_ERROR. Some platforms (such as OS2) have no such mechanism, so this call may be unsupported.



.. rubric:: Parameters:

.. list-table::
    :widths: 20 80

    *
        - e

        - The OS error folded in a prior call to :ref:`APR_FROM_OS_ERROR() <doxid-group__apr__errno_1ga2096daff578ef301e060b80c7a4525bf>`

